# qsl-management

./: .gitignore  AGENTS.md  BackendApiContract.md  ProductDefinition.md  README.md  agents.md  emailTemplate.md  gradle.properties  plan.md  scenario-check-result.md  settings.gradle  tmp-openapi.json  分场景操作流程.md  场景拆分重构冻结方案.md  场景流程验证汇总.md  数据字段与组织结构汇总.md  菜单组织结构.md  需求实现核对清单.md  需求描述.md
docs/: README.md
tools/CardPrint/: pyproject.toml  readme.md  卡片预设2026v1.json  卡片预设2026v2.20260504.json  卡片预设2026v2.json  卡片预设2026v3含二维码.json  卡片预设2026v4含二维码.json  卡片预设2026v4含二维码（改）.json
tools/CardPrint/cardprint/: __init__.py
tools/CardPrint/docs/: 实施任务清单.md  技术实现方案.md  阶段测试报告.md
tools/CardPrint/src/cardprint/: __init__.py  cli.py
tools/CardPrint/src/cardprint/core/: datasource_service.py  errors.py  layout_engine.py  models.py  preset_service.py  transform.py  units.py
tools/CardPrint/src/cardprint/halo/: __init__.py  halo_issue_service.py
tools/CardPrint/src/cardprint/online/: __init__.py  bridge_service.py
tools/CardPrint/src/cardprint/plugins/: __init__.py
tools/CardPrint/src/cardprint/preview/: __init__.py  preview_renderer.py  preview_scene.py
tools/CardPrint/tests/: test_cli_commands.py  test_deadzone.py  test_digit_raise_printing.py  test_field_editor_layout_mode.py  test_field_wrap.py  test_online_bridge_service.py  test_preset_meta.py  test_preset_schema.py  test_preview_canvas_brush.py  test_print_alignment_border.py  test_printer_papers.py  test_printer_qrcode_dots.py  test_qrcode_url_mapping.py  test_transform.py  test_vertical_layout.py
ui/src/: api.ts  (+1 more)
(+358 files in other folders)
